[package]
name = "rcli"
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
derive = "1.0.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_derive = "1.0.199"
features = "0.10.0"
structopt = "0.3.26"
serde_json = "1.0.116"
serde_yaml = "0.9.34"
rand = "0.8.5"
zxcvbn = "2.2.2"
base64 = "0.22.1"
blake3 = "1.5.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
tower-http = { version = "0.5.2", features = ["compression-full", "cors", "trace", "fs"] }
